<resources>
    <string name="app_name">QuizExo</string>
    <string name="title_bar">Hello ! Please insert your name</string>
    <string name="title_Activity2">Question 1/4:</string>
    <string name="input_name" />
    <string name="input_name_hint">Insert your name here</string>
    <string name="btn_start">Start Quiz</string>
    <string name="questionText">Question</string>
    <string name="delete">delete</string>
    <string name="dialog_title">Quiz finished</string>
    <string name="dialog_message">Your score is</string>
</resources>